unpackaged/objects/copadoconnect__Field_Value_Mapping__c.object
<CustomObject>
	<fields>
		<fullName>copadoconnect__External_Field_Value__c</fullName>
		<label>External Field Value</label>
		<length>255</length>
		<required>true</required>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Field_Mapping__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Field Mapping</label>
		<referenceTo>copadoconnect__FieldMapping__c</referenceTo>
		<relationshipLabel>Field Value Mappings</relationshipLabel>
		<relationshipName>Field_Value_Mappings</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Salesforce_Field_Value__c</fullName>
		<label>Salesforce Field Value</label>
		<length>255</length>
		<required>true</required>
		<type>Text</type>
	</fields>
	<label>Field Value Mapping</label>
	<nameField>
		<displayFormat>FVM-{0000}</displayFormat>
		<label>Field Value Mapping Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Field Value Mappings</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>